# DIP_project

./: README.md
task1/: CMakeLists.txt  README.md
task1/data/: histograms.xml
task1/data/shots/: hist1_000.xml  hist1_001.xml  hist1_002.xml  hist1_003.xml  hist1_004.xml  hist1_005.xml  hist1_006.xml
task1/src/: createDataBase.cpp  createDictionarySURF.cpp  hist.h  hist.h~  imgInVideoOut.cpp  readDictionary.cpp~  rgb_hist.cpp  rgb_hist.cpp~  saveShots.cpp  test.cpp  test.cpp~  test_sorting.c  test_sorting.cpp  test_sorting.cpp~  videoImagesDatabase.cpp  videoImagesDatabase.cpp~  videoRetrieval.cpp  video_to_images.cpp  video_to_images1.cpp  video_to_images_dictionary.cpp  video_to_images_dictionary.cpp~
task2/: .CMakeLists.txt.swp  CMakeLists.txt  README.md
task2/data/: videosMap.xml
task2/data/xmls/: hist_vid0.xml  hist_vid1.xml  hist_vid2.xml  hist_vid3.xml  hist_vid4.xml
task2/src/: .createDictionarySURF.cpp.swp  .getVideosfromShotTHREAD.cpp.swp  createMapping.cpp  getVideosfromShot.cpp  getVideosfromShotTHREAD.cpp  saveShots.cpp
